--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
           width: 15%;
           padding: 10px;
           border: 1px solid;
+          margin-top: 15px;
+          border-radius: 5px;
+          background-color: whitesmoke;
         }
   
         .img {
@@ -65,18 +68,11 @@
   </head>
   <body>
     <h1>Pokemon Names List</h1>
-    <select name="count" id="count">
-        <option value="50">50</option>
-        <option value="200">200</option>
-        <option value="500">500</option>
-        <option value="1010">1010</option>
-    </select>
+    
     <div class="container"></div>
 
     <script>
-
-        let count = document.getElementById("count").value
-      for (let i = 0; i <= count; i++) {
+      for (let i = 0; i <= 500; i++) {
         fetch(`https://pokeapi.co/api/v2/pokemon/${i}`)
           .then(function (respo) {
             return respo.json();
