--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
           border-radius: 5px;
           background-color: whitesmoke;
         }
+
+        @media only screen and (max-width:900px) {
+          .pokemon{
+            width: 30%;
+          }
+        }
+
+        @media only screen and (max-width:525px) {
+          .pokemon{
+            width: 48%;
+          }
+        }
   
         .img {
           text-align: center;
