--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <h1>Pokemon Names List</h1>
     <div class="container"></div>
 
-    <script src="fetch.js"></script>
+    <script src="fetch_poke.js"></script>
   </body>
 </html>
