added search functionality

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Pokemon Names List</h1>
+    <header>
+      <h1>Pokemon Names List</h1>
+     <div class="search-box"> <input type="text" id="search" class="search" /></div>
+    </header>
     <div class="container"></div>
 
     <script src="fetch_poke.js"></script>
